@@ -2,6 +2,7 @@ From version 0.3.1 to 0.3.2
 - use of new "user context" objects, allows account lookup to be dynamic
   and externalized.
 - minor fix for init script.
+- use of GROUP to set effective server group id.
 
 From version 0.3.0 to 0.3.1
 - expansion of rtpproxy runtime api for expanding assignment and counting
